# comaps

./: configure.sh  defines.hpp  funding.json  private.h
.forgejo/workflows/: android-beta.yaml  android-check.yaml  android-release.yaml  appstream-check.yaml  coverage-check.yaml  linux-check.yaml  map-generator.yml  mapgen-reviews.yml  mapgen-subways.yml  mapgen-tiger.yml  mapgen-upload.yml  mapgen-wikipedia.yml  process_subways.yml
.github/workflows/: android-check.yaml  ios-check.yaml  linux-check.yaml
android/app/: build.gradle
data/: copyright.html  countries.txt  editor.config  mapcss-mapping.csv  subtypes.csv  taginfo.json
dev_sandbox/: CMakeLists.txt  imgui_renderer.cpp
docs/: ANDROID_CRASHES.md  INSTALL.md  ISOLINES.md  MAPS.md  REVIEWS.md  STRUCTURE.md  STYLES.md  TRANSLATIONS.md  UNIT_TESTING.md  VS_CODIUM.md
generator/: CMakeLists.txt  boundary_postcodes_enricher.cpp  collector_boundary_postcode.cpp  feature_builder.cpp  hierarchy_entry.cpp  maxspeeds_builder.cpp  maxspeeds_parser.cpp  osm2meta.cpp  osm2meta.hpp  osm2type.cpp  reviews_section_builder.cpp  reviews_section_builder.hpp  road_access_generator.hpp
generator/address_parser/: CMakeLists.txt
generator/complex_generator/: CMakeLists.txt
generator/feature_segments_checker/: CMakeLists.txt
generator/generator_integration_tests/: CMakeLists.txt  features_tests.cpp
generator/generator_tests/: CMakeLists.txt  collector_boundary_postcode_tests.cpp  descriptions_section_builder_tests.cpp  osm_type_test.cpp  reviews_section_builder_tests.cpp
generator/generator_tests_support/: CMakeLists.txt  test_feature.cpp  test_feature.hpp
generator/generator_tool/: CMakeLists.txt  generator_tool.cpp
generator/pygen/: pygen.cpp
generator/srtm_coverage_checker/: CMakeLists.txt
generator/world_roads_builder/: CMakeLists.txt
generator/world_roads_builder/world_roads_builder_tool/: CMakeLists.txt
libs/: CMakeLists.txt
libs/base/: CMakeLists.txt  atomic_shared_ptr.hpp  string_utils.cpp  string_utils.hpp
libs/coding/: CMakeLists.txt
libs/descriptions/: CMakeLists.txt
libs/drape/: CMakeLists.txt
libs/drape_frontend/: CMakeLists.txt  apply_feature_functors.cpp  drape_engine.cpp  drape_engine.hpp  frontend_renderer.cpp  message.cpp  message.hpp  message_subclasses.hpp  my_position_controller.cpp  my_position_controller.hpp  user_mark_shapes.cpp
libs/editor/: CMakeLists.txt  new_feature_categories.cpp  new_feature_categories.hpp  osm_auth.cpp  osm_auth.hpp  xml_feature.cpp
libs/editor/editor_tests/: CMakeLists.txt  osm_editor_test.hpp
libs/editor/editor_tests_support/: CMakeLists.txt
libs/editor/osm_auth_tests/: CMakeLists.txt  osm_auth_tests.cpp
libs/ge0/: CMakeLists.txt  geo_url_parser.cpp  geo_url_parser.hpp  parser.cpp
libs/i18n/: CMakeLists.txt  localisation.cpp  localisation_translation.cpp  string_utf8_multilang.cpp  string_utf8_multilang.hpp  transliteration.cpp  transliteration.hpp
libs/i18n/i18n_tests/: CMakeLists.txt  string_utf8_multilang_tests.cpp  transliteration_test.cpp
libs/indexer/: CMakeLists.txt  categories_holder.cpp  categories_holder.hpp  editable_map_object.cpp  feature.cpp  feature_data.cpp  feature_data.hpp  feature_meta.cpp  feature_meta.hpp  feature_utils.cpp  feature_utils.hpp  feature_visibility.cpp  ftypes_matcher.cpp  ftypes_matcher.hpp  ftypes_subtypes.cpp  ftypes_subtypes.hpp  map_object.cpp  map_object.hpp  metadata_serdes.cpp  metadata_serdes.hpp  reviews_display.hpp  reviews_loader.cpp  reviews_loader.hpp  reviews_serdes.hpp  road_shields_parser.cpp  route_relation.hpp  search_string_utils.cpp  transliteration_loader.cpp
libs/kml/: CMakeLists.txt  type_utils.cpp
libs/map/: CMakeLists.txt  api_mark_point.cpp  api_mark_point.hpp  benchmark_tools.cpp  bookmark.cpp  bookmark.hpp  bookmark_helpers.cpp  bookmark_helpers.hpp  bookmark_manager.cpp  bookmark_manager.hpp  elevation_info.cpp  elevation_info.hpp  everywhere_search_callback.cpp  everywhere_search_callback.hpp  features_fetcher.cpp  features_fetcher.hpp  framework.cpp  framework.hpp  framework_visualize.cpp  gps_track.cpp  gps_track.hpp  gps_track_filter.cpp  gps_track_filter.hpp  gps_tracker.cpp  gps_tracker.hpp  isolines_manager.cpp  isolines_manager.hpp  mwm_url.cpp  mwm_url.hpp  place_page_info.cpp  place_page_info.hpp  routing_manager.cpp  routing_manager.hpp  routing_mark.cpp  routing_mark.hpp  search_api.cpp  search_api.hpp  search_mark.cpp  search_mark.hpp  track.cpp  (+12 more)
libs/map/style_tests/: CMakeLists.txt
libs/mwm_diff/: CMakeLists.txt
libs/mwm_diff/mwm_diff_tests/: CMakeLists.txt
libs/mwm_diff/mwm_diff_tool/: CMakeLists.txt
libs/platform/: CMakeLists.txt  downloader_utils.cpp  helpers.cpp  helpers.hpp  platform_android.cpp  settings.cpp
libs/reviews/: CMakeLists.txt  REVIEWS.md  display.hpp  loader.cpp  loader.hpp  model.hpp  serdes.hpp
libs/routing/: CMakeLists.txt  car_directions.cpp  directions_engine.cpp  edge_estimator.cpp  following_info.hpp  geometry.cpp  index_graph.cpp  index_graph_loader.cpp  index_router.cpp  road_access_serialization.hpp  route.cpp  route.hpp  routing_options.cpp  routing_options.hpp  (+6 more)
libs/routing/routes_builder/: CMakeLists.txt
libs/routing/routes_builder/routes_builder_tool/: CMakeLists.txt
libs/routing/routing_quality/: CMakeLists.txt
libs/routing/routing_quality/api/: CMakeLists.txt
libs/routing/routing_quality/routing_quality_tests/: CMakeLists.txt
libs/routing/routing_quality/routing_quality_tool/: CMakeLists.txt
libs/search/search_quality/features_collector_tool/: CMakeLists.txt  features_collector_tool.cpp
libs/search/search_quality/samples_generation_tool/: CMakeLists.txt  samples_generation_tool.cpp
libs/search/search_quality/search_quality_tool/: CMakeLists.txt  search_quality_tool.cpp
packaging/: app.comaps.comaps.metainfo.xml
qt/: CMakeLists.txt  draw_widget.cpp  editor_dialog.cpp  place_page_dialog_developer.cpp  place_page_dialog_user.cpp  star_rating_widget.cpp  star_rating_widget.hpp  update_dialog.cpp
tools/poly_borders/poly_borders_tests/: CMakeLists.txt
tools/track_generator/: CMakeLists.txt
(+662 files in other folders)
